--- a/example/package.json
+++ b/example/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "express": "^4.12.3",
     "serve-static": "^1.7.1",
-    "swig": "^1.4.2"
+    "swig": "^1.4.2",
+    "debounce": "^1.0.0"
   },
   "devDependencies": {
     "grunt": "~0.4.2",
