--- a/example/package.json
+++ b/example/package.json
@@ -9,10 +9,12 @@
   "author": "Onno van der Steen <ovdsteen@gmail.com>",
   "main": "app.js",
   "dependencies": {
+    "debounce": "^1.0.0",
     "express": "^4.12.3",
+    "lorem-ipsum": "^1.0.3",
     "serve-static": "^1.7.1",
-    "swig": "^1.4.2",
-    "debounce": "^1.0.0"
+    "superagent": "^1.3.0",
+    "swig": "^1.4.2"
   },
   "devDependencies": {
     "grunt": "~0.4.2",
